resizes google svg, fixes some spacing

--- a/resources/assets/scss/_components/_google-login.scss
+++ b/resources/assets/scss/_components/_google-login.scss
@@ -7,6 +7,12 @@ $google-blue: #4285F4;
   color: #202020;
   text-transform: none;
   margin: $base-spacing / 2 0;
+
+  svg {
+      display: inline-block;
+      height: 30px;
+      width: 30px;
+  }
   
   &:active {
     background: $google-blue;
